# snes9x_esp32

./: README.md  sdkconfig  sdkconfig.old
assets/: battery.h  rect.h  scroll_bar.h  thumbnail.h
components/emumgr/: CMakeLists.txt  emumgr.cpp  emumgr.h  emumgr_hal.cpp  emumgr_hal.h  emumgr_lang_de.h  emumgr_lang_en.h  heapstrings.cpp  heapstrings.h
components/engine/: CMakeLists.txt  hwcfg.h  picoengine.cpp  picoengine.h  typedefs.h
components/engine/adc/: adc.cpp  adc.h
components/engine/control/: control.cpp  control.h
components/engine/fonts/: fonts.cpp  fonts.h
components/engine/fonts/fontfiles/: f13x16.h  f8x11.h  picoheld_pixel_14_numbers.h  picoheld_pixel_5x7_rosa.h  pixelmix_14_16.h
components/engine/graphics/: blitter.cpp  blitter.h  colors.cpp  colors.h  gbuffers.cpp  gbuffers.h  primitives.cpp  primitives.h
components/engine/power/: power.cpp  power.h
components/engine/utils/: timing.cpp
components/i2s_audio/: i2s_audio.cpp  i2s_audio.h
components/lcd/: CMakeLists.txt  lcd_drv.c  lcd_drv.h  lcd_dxq3d9502.h  lcd_ek79007.h  lcd_hd395003c30.h  lcd_kd040hdfid032.h  lcd_mipi_dsi.h  lcd_p055h020v2.h  lcd_panel_dpi.c  lcd_txw350099c0.h
components/snes9x/: apu.c  cpuexec.h  cpuops.c  gfx.c  memmap.c  memmap.h  snes9x.h  soundux.c  tile.h
components/usbhid/: CMakeLists.txt  usbhid.cpp  usbhid.h
main/: CMakeLists.txt  main.cpp
tools/hid/: sdkconfig
tools/hid/.cache/clangd/index/: hid.h.DB286C3DCD5B460A.idx  hid_host.c.19407CD2480D808B.idx  hid_host.h.32325796C8965CE4.idx  hid_host_example.c.D5A842C795F5B5F3.idx  hid_usage_keyboard.h.6DD7F2E9FE0F2EC6.idx  hid_usage_mouse.h.CDBBD02D0DC39E9B.idx
tools/hid/main/: hid_host_example.c
